// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <label>
      Password
    </label>
    <span
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span>
        <input
          autoComplete="password"
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          type="password"
          value=""
        />
      </span>
      <span />
      <span />
    </span>
    <p />
  </div>
</form>
`;

exports[`should render show button if visible is false 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <label>
      Password
    </label>
    <span
      style={
        Object {
          "--iconsAfter": 1,
          "--iconsBefore": 0,
        }
      }
    >
      <span>
        <input
          autoComplete="password"
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </span>
      <span />
      <span>
        <button
          disabled={false}
          onClick={[MockFunction]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            <svg
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <p />
  </div>
</form>
`;

exports[`should render toggle button if isToggleButtonHidden is false 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <label>
      Password
    </label>
    <span
      style={
        Object {
          "--iconsAfter": 1,
          "--iconsBefore": 0,
        }
      }
    >
      <span>
        <input
          autoComplete="password"
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          type="password"
          value=""
        />
      </span>
      <span />
      <span>
        <button
          disabled={false}
          onClick={[MockFunction]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            <svg
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
              />
              <line
                x1="1"
                x2="23"
                y1="1"
                y2="23"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <p />
  </div>
</form>
`;
